# ledgerita

./: .gitignore  inicio.md  sesion-2026-06-15.md
ledgerita_core/: Cargo.toml
ledgerita_core/.cargo/: config.toml
ledgerita_core/src/: crypto.rs  lib.rs  main.rs  network.rs  state.rs  transaction.rs
